--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
         <!-- cont inner end -->
       </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 <script>
     var $cont = document.querySelector('.cont');
     var $elsArr = [].slice.call(document.querySelectorAll('.el'));
