--- a/index.html
+++ b/index.html
@@ -383,13 +383,13 @@
 
         <div class="app__bg">
             <div class="app__bg__image current--image">
-                <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
+                <img src="./image-1.jpg" alt="" />
             </div>
             <div class="app__bg__image next--image">
-                <img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
+                <img src="./image-2.jpg" alt="" />
             </div>
             <div class="app__bg__image previous--image">
-                <img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
+                <img src="./image-3.jpg" alt="" />
             </div>
         </div>
     </div>
