--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="app">
 
         <div class="cardList">
-            <button class="cardList__btn btn btn--left">
+            <button class="cardList__btn btn btn--left" id="btn--left">
                 <div class="icon">
                     <svg>
                         <use xlink:href="#arrow-left"></use>
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <button class="cardList__btn btn btn--right">
+            <button class="cardList__btn btn btn--right" id="btn--right">
                 <div class="icon">
                     <svg>
                         <use xlink:href="#arrow-right"></use>
