--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <div class="cards__wrapper">
                 <div class="card current--card">
                     <div class="card__image">
-                        <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
+                        <img src="./image-1.jpg" alt="" />
                     </div>
                 </div>
 
                 <div class="card next--card">
                     <div class="card__image">
-                        <img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
+                        <img src="./image-2" alt="" />
                     </div>
                 </div>
 
                 <div class="card previous--card">
                     <div class="card__image">
-                        <img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
+                        <img src="./image-3.jpg" alt="" />
                     </div>
                 </div>
             </div>
