--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
         </div>
     </div>
 
+    <div class="footer discord-embed">
+        <div class="status" id="status">
+            <img src="https://api.lanyard.rest/486343483569864708.png" alt="avatar" id="avatar" class="avatar-pic" />
+        </div>
+        <div id="details">
+            <span class="iconify" data-icon="akar-icons:discord-fill" data-width="50" style="color:white"></span><br/>
+            <span id="statusText">I'm Currently <span id="discordStatus">Loading...</span></span>
+            <br/>
+            <span id="username">Loading...</span>
+            <span id="tag">#Loading...</span>
+        </div>
+    </div>
+
     <div class="loading__wrapper">
         <div class="loader--text">Loading...</div>
         <div class="loader">
