--- a/index.html
+++ b/index.html
@@ -89,16 +89,7 @@
     </div>
 
     <div class="footer discord-embed">
-        <div class="status" id="status">
-            <img src="https://api.lanyard.rest/486343483569864708.png" alt="avatar" id="avatar" class="avatar-pic" />
-        </div>
-        <div id="details">
-            <span class="iconify" data-icon="akar-icons:discord-fill" data-width="50" style="color:white"></span><br/>
-            <span id="statusText">I'm Currently <span id="discordStatus">Loading...</span></span>
-            <br/>
-            <span id="username">Loading...</span>
-            <span id="tag">#Loading...</span>
-        </div>
+        <img src="https://lanyard.cnrad.dev/api/486343483569864708?animated=true&bg=RRGGBB"/>
     </div>
 
     <div class="loading__wrapper">
