Force Reload & Embed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/5.0.0/imagesloaded.pkgd.min.js" integrity="sha512-kfs3Dt9u9YcOiIt4rNcPUzdyNNO9sVGQPiZsub7ywg6lRW5KuK1m145ImrFHe3LMWXHndoKo2YRXWy8rnOcSKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js" integrity="sha512-hIlMpy2enepx9maXZF1gn0hsvPLerXoLHdb095CmRY5HG3bZfN7XPBZ14g+TUDH1aGgfLyPHmY9/zuU53smuMw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://totem.lol/styles.css?15">
+    <link rel="stylesheet" href="https://totem.lol/styles.css?20">
 </head>
 <body>
     <div class="app">
@@ -89,7 +89,7 @@
     </div>
 
     <div class="footer discord-embed">
-        <img src="https://lanyard.cnrad.dev/api/486343483569864708?animated=true&bg=RRGGBB"/>
+        <a href="https://discord.com/users/486343483569864708"><img src="https://lanyard.cnrad.dev/api/486343483569864708?animated=true&bg=RRGGBB"/></a>
     </div>
 
     <div class="loading__wrapper">
@@ -111,5 +111,5 @@
         </symbol>
     </svg>
 </body>
-<script src="https://totem.lol/script.js?15"></script>
+<script src="https://totem.lol/script.js?20"></script>
 </html>
