--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="app__bg">
             <div class="app__bg__image current--image">
-                <img src="./1-bg.gif" alt="" />
+                <img style="max-width: 100%; max-height: 100%;" src="./1-bg.gif" alt="" />
             </div>
             <div class="app__bg__image next--image">
                 <img src="./image-2.jpg" alt="" />
