--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/5.0.0/imagesloaded.pkgd.min.js" integrity="sha512-kfs3Dt9u9YcOiIt4rNcPUzdyNNO9sVGQPiZsub7ywg6lRW5KuK1m145ImrFHe3LMWXHndoKo2YRXWy8rnOcSKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js" integrity="sha512-hIlMpy2enepx9maXZF1gn0hsvPLerXoLHdb095CmRY5HG3bZfN7XPBZ14g+TUDH1aGgfLyPHmY9/zuU53smuMw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://totem.lol/styles.css?30">
+    <link rel="stylesheet" href="https://totem.lol/styles.css?33">
 </head>
 <body>
     <div class="app">
@@ -26,19 +26,19 @@
             <div class="cards__wrapper">
                 <div class="card current--card">
                     <div class="card__image">
-                        <img class="lanyard__image" src="https://lanyard.cnrad.dev/api/486343483569864708?animated=true&bg=RRGGBB" alt="" />
+                        <a href="./Projects"><img src="./image-1.png" alt="" /></a>
                     </div>
                 </div>
 
                 <div class="card next--card">
                     <div class="card__image">
-                        <img src="./image-2" alt="" />
+                        <a href="https://github.com/Xv3nm/lua-rblx-repo"></a><img src="./image-2.jpg" alt="" /></a>
                     </div>
                 </div>
 
                 <div class="card previous--card">
                     <div class="card__image">
-                        <img src="./image-3.jpg" alt="" />
+                        <a href="https://v3rmillion.net/member.php?action=profile&uid=567152"></a><img src="./image-3.jpg" alt="" /></a>
                     </div>
                 </div>
             </div>
@@ -56,20 +56,20 @@
             <div class="info__wrapper">
                 <div class="info current--info">
                     <h1 class="text name typedintro"></h1>
-                    <h4 class="text location">Totem#0001</h4>
+                    <h4 class="text location">Click to see Projects!</h4>
                     <p class="text description">A Bored Scripter</p>
                 </div>
 
                 <div class="info next--info">
-                    <h1 class="text name">Machu Pichu</h1>
-                    <h4 class="text location">Peru</h4>
-                    <p class="text description">Adventure is never far away</p>
+                    <h1 class="text name">Xv3nm (Totem)</h1>
+                    <h4 class="text location">Github</h4>
+                    <p class="text description">Location of all of my scripts</p>
                 </div>
 
                 <div class="info previous--info">
-                    <h1 class="text name">Chamonix</h1>
-                    <h4 class="text location">France</h4>
-                    <p class="text description">Let your dreams come true</p>
+                    <h1 class="text name">Totem</h1>
+                    <h4 class="text location">v3rmillion</h4>
+                    <p class="text description">My v3rmillion profile</p>
                 </div>
             </div>
         </div>
@@ -111,5 +111,5 @@
         </symbol>
     </svg>
 </body>
-<script src="https://totem.lol/script.js?20"></script>
+<script src="https://totem.lol/script.js?33"></script>
 </html>
