--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             <div class="cards__wrapper">
                 <div class="card current--card projects__card">
                     <div class="card__image">
-                        <img src="./portal.png" alt="" />
+                        <img src="./portal.gif" alt="" />
                     </div>
                 </div>
 
                 <div class="card next--card">
                     <div class="card__image">
-                        <img src="./portal.png" alt="" />
+                        <img src="./portal.gif" alt="" />
                     </div>
                 </div>
 
                 <div class="card previous--card verm__card">
                     <div class="card__image">
-                        <img src="./portal.png" alt="" />
+                        <img src="./portal.gif" alt="" />
                     </div>
                 </div>
             </div>
