--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
 
-                <div class="card next--card">
+                <div class="card next--card github__card">
                     <div class="card__image">
                         <img src="./portal.gif" alt="" />
                     </div>
