--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/5.0.0/imagesloaded.pkgd.min.js" integrity="sha512-kfs3Dt9u9YcOiIt4rNcPUzdyNNO9sVGQPiZsub7ywg6lRW5KuK1m145ImrFHe3LMWXHndoKo2YRXWy8rnOcSKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js" integrity="sha512-hIlMpy2enepx9maXZF1gn0hsvPLerXoLHdb095CmRY5HG3bZfN7XPBZ14g+TUDH1aGgfLyPHmY9/zuU53smuMw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://totem.lol/styles.css?1999">
+    <link rel="stylesheet" href="https://totem.lol/styles.css?2000">
+
+
+
+    <meta content="Totem#0001's Landing Page" property="og:title" />
+    <meta content="75:15:10 (KNO3:Charcoal:S8)" property="og:description" />
+    <meta content="https://totem.lol/" property="og:url" />
+    <meta content="https://totem.lol/embed.jpg" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
     <div class="app">
@@ -112,7 +120,7 @@
         </symbol>
     </svg>
 </body>
-<script src="https://totem.lol/script.js?1999"></script>
+<script src="https://totem.lol/script.js?2000"></script>
 <script>
     $(document).on("mousedown", function (e1) {
     if (e1.which === 2) {
