--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <meta content="Totem#0001's Landing Page" property="og:title" />
-    <meta content="75:15:10 (KNO3:Charcoal:S8)" property="og:description" />
+    <meta content="Contains my v3rm, github, and other projects. WIP" property="og:description" />
     <meta content="https://totem.lol/" property="og:url" />
     <meta content="https://totem.lol/embed.jpg" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
