--- a/index.html
+++ b/index.html
@@ -23,62 +23,14 @@
 <body>
     <div class="app">
 
-        <div class="cardList">
-            <button class="cardList__btn btn btn--left" id="btn--left">
-                <div class="icon">
-                    <svg>
-                        <use xlink:href="#arrow-left"></use>
-                    </svg>
-                </div>
-            </button>
-
-            <div class="cards__wrapper">
-                <div class="card current--card projects__card">
-                    <div class="card__image">
-                        <img src="./portal.gif" alt="" />
-                    </div>
-                </div>
-
-                <div class="card next--card github__card">
-                    <div class="card__image">
-                        <img src="./portal.gif" alt="" />
-                    </div>
-                </div>
-
-                <div class="card previous--card verm__card">
-                    <div class="card__image">
-                        <img src="./portal.gif" alt="" />
-                    </div>
-                </div>
-            </div>
-
-            <button class="cardList__btn btn btn--right" id="btn--right">
-                <div class="icon">
-                    <svg>
-                        <use xlink:href="#arrow-right"></use>
-                    </svg>
-                </div>
-            </button>
-        </div>
+        
 
         <div class="infoList">
             <div class="info__wrapper">
                 <div class="info current--info">
                     <h1 class="text name typedintro"></h1>
-                    <h4 class="text location">Click to see Projects!</h4>
-                    <p class="text description">A Bored Scripter</p>
-                </div>
-
-                <div class="info next--info">
-                    <h1 class="text name">Xv3nm (Totem)</h1>
-                    <h4 class="text location">Github</h4>
-                    <p class="text description">Location of all of my scripts</p>
-                </div>
-
-                <div class="info previous--info">
-                    <h1 class="text name">Totem</h1>
-                    <h4 class="text location">v3rmillion</h4>
-                    <p class="text description">My v3rmillion profile</p>
+                    <h4 class="text location">A Bored Coder</h4>
+                    <p class="text description">Click to continue...</p>
                 </div>
             </div>
         </div>
@@ -87,12 +39,6 @@
         <div class="app__bg">
             <div class="app__bg__image current--image">
                 <img src="./1-bg.gif" alt="" />
-            </div>
-            <div class="app__bg__image next--image">
-                <img src="./image-2.jpg" alt="" />
-            </div>
-            <div class="app__bg__image previous--image">
-                <img src="./image-3.jpg" alt="" />
             </div>
         </div>
     </div>
