--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="infoList">
             <div class="info__wrapper">
                 <div class="info current--info">
-                    <h1 class="text name typedintro"></h1>
-                    <h4 class="text location">A Bored Coder</h4>
-                    <p class="text description">Click to continue...</p>
+                    <h1 class="text name typedintro">Hello!</h1> 
+                    <h4 class="text location"></h4>        <!-- Filler -->
+                    <p class="text description">A Bored Coder</p>
                 </div>
             </div>
         </div>
