--- a/index.html
+++ b/index.html
@@ -3,52 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" type="image/x-icon" href="./icon.jpg" />
-    <title>Totem</title>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/5.0.0/imagesloaded.pkgd.min.js" integrity="sha512-kfs3Dt9u9YcOiIt4rNcPUzdyNNO9sVGQPiZsub7ywg6lRW5KuK1m145ImrFHe3LMWXHndoKo2YRXWy8rnOcSKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js" integrity="sha512-hIlMpy2enepx9maXZF1gn0hsvPLerXoLHdb095CmRY5HG3bZfN7XPBZ14g+TUDH1aGgfLyPHmY9/zuU53smuMw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://totem.lol/styles.css?2111">
-
-
-
-    <meta content="Totem#0001's Landing Page" property="og:title" />
-    <meta content="https://totem.lol/" property="og:url" />
-    <meta content="https://totem.lol/embed.jpg" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script defer src="./script.js"></script>
+    <title>Totem.lol</title>
 </head>
 <body>
-    <div class="app">
-            <div class="infoList">
-            <div class="info__wrapper">
-                <div class="info current--info">
-                    <h1 class="text name typedintro">Hello!</h1> 
-                    <h4 class="text location"></h4>        <!-- Filler -->
-                    <p class="text description">A Bored Coder</p>
-                </div>
-            </div>
+  <svg width="0" height="0">
+    <filter id='grainy' x="0" y="0" width="100%" height="100%">
+        <feTurbulence type="fractalNoise" baseFrequency='.5'/>
+        <feColorMatrix type='saturate' values='0'/>
+        <feBlend in='SourceGraphic' mode='multiply'/>
+    </filter>
+    <filter id="distfx-0">
+        <feTurbulence id="turbulence" baseFrequency="0.05" numOctaves="1" seed="0"/>
+        <feDisplacementMap in="SourceGraphic" scale="1"/>
+    </filter>
+    <filter id="distfx-1">
+        <feTurbulence id="turbulence" baseFrequency="0.05" numOctaves="2" seed="1"/>
+        <feDisplacementMap in="SourceGraphic" scale="2"/>
+    </filter>
+    <filter id="distfx-2">
+        <feTurbulence id="turbulence" baseFrequency="0.05" numOctaves="3" seed="2"/>
+        <feDisplacementMap in="SourceGraphic" scale="3"/>
+    </filter>
+    <filter id="distfx-3">
+        <feTurbulence id="turbulence" baseFrequency="0.05" numOctaves="4" seed="3"/>
+        <feDisplacementMap in="SourceGraphic" scale="4"/>
+    </filter>
+    <filter id="distfx-4">
+        <feTurbulence id="turbulence" baseFrequency="0.05" numOctaves="3" seed="4"/>
+        <feDisplacementMap in="SourceGraphic" scale="3"/>
+    </filter>
+    <filter id="distfx-5">
+        <feTurbulence id="turbulence" baseFrequency="0.05" numOctaves="2" seed="5"/>
+        <feDisplacementMap in="SourceGraphic" scale="2"/>
+    </filter>
+</svg>
+  <button id="projectsButton" class="hidden" onclick="scrollToElement('page2')">Projects</button>
+  <button id="contactButton" class="hidden" onclick="scrollToElement('page2')">Contact Me</button>
+    <div class="background"></div>
+    <div id="page1" class="page">
+        <div class="typed-text-container">
+            <span id="typed-text"></span>
         </div>
-
-
-        <div class="app__bg">
-            <div class="app__bg__image current--image">
-                <img src="./1-bg.gif" alt="" />
-            </div>
+        <div class="arrow-container" onclick="scrollToElement('page2')">
+            <div class="arrow-down"></div>
         </div>
     </div>
-
-    <div class="footer discord-embed">
-        <a href="https://discord.com/users/486343483569864708"><img src="https://lanyard.cnrad.dev/api/486343483569864708?animated=true&bg=RRGGBB"/></a>
-    </div>
-
-    <div class="loading__wrapper">
-        <div class="loader--text">Loading...</div>
-        <div class="loader">
-            <span></span>
+    <div id="page2" class="page">
+        <div class="links-container">
+            <!-- Replace the text with the logo image -->
+            <a href="https://github.com/Xv3nm" target="_blank">
+              <img src="./github-logo.png" alt="GitHub" class="logo" />
+            </a>
+            <a href="https://v3rmillion.net/member.php?action=profile&uid=567152" target="_blank">
+              <img src="./v3rmillion-logo.png" alt="V3rmillion" class="logo" />
+            </a>
+            <a href="https://discord.com/users/486343483569864708" target="_blank">
+              <img src="./discord-logo.png" alt="Discord" class="logo" />
+            </a>
+            <a href="https://www.roblox.com/users/749710865/profile" target="_blank">
+              <img src="./roblox-logo.png" alt="Roblox" class="logo" />
+            </a>
         </div>
     </div>
 </body>
-<script src="https://totem.lol/script.js?2111"></script>
 </html>
