--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
         <div class="links-container">
             <!-- Replace the text with the logo image -->
             <a href="https://github.com/Xv3nm" target="_blank">
-              <img src="./github-logo.png" alt="GitHub" class="logo" />
+              <img src="./github-logo.png?=2" alt="GitHub" class="logo" />
             </a>
             <a href="https://v3rmillion.net/member.php?action=profile&uid=567152" target="_blank">
-              <img src="./v3rmillion-logo.png" alt="V3rmillion" class="logo" />
+              <img src="./v3rmillion-logo.png?=2" alt="V3rmillion" class="logo" />
             </a>
             <a href="https://discord.com/users/486343483569864708" target="_blank">
-              <img src="./discord-logo.png" alt="Discord" class="logo" />
+              <img src="./discord-logo.png?=2" alt="Discord" class="logo" />
             </a>
             <a href="https://www.roblox.com/users/749710865/profile" target="_blank">
-              <img src="./roblox-logo.png" alt="Roblox" class="logo" />
+              <img src="./roblox-logo.png?=2" alt="Roblox" class="logo" />
             </a>
         </div>
     </div>
