Order and styles

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css?=2">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script defer src="./script.js"></script>
+    <script defer src="./script.js?=2"></script>
     <title>Totem.lol</title>
 </head>
 <body>
@@ -55,14 +55,14 @@
     <div id="page2" class="page">
         <div class="links-container">
             <!-- Replace the text with the logo image -->
-            <a href="https://github.com/Xv3nm" target="_blank">
-              <img src="./github-logo.png?=2" alt="GitHub" class="logo" />
-            </a>
+            <a href="https://discord.com/users/486343483569864708" target="_blank">
+                <img src="./discord-logo.png?=2" alt="Discord" class="logo" />
+              </a>
             <a href="https://v3rmillion.net/member.php?action=profile&uid=567152" target="_blank">
               <img src="./v3rmillion-logo.png?=2" alt="V3rmillion" class="logo" />
             </a>
-            <a href="https://discord.com/users/486343483569864708" target="_blank">
-              <img src="./discord-logo.png?=2" alt="Discord" class="logo" />
+            <a href="https://github.com/Xv3nm" target="_blank">
+                <img src="./github-logo.png?=2" alt="GitHub" class="logo" />
             </a>
             <a href="https://www.roblox.com/users/749710865/profile" target="_blank">
               <img src="./roblox-logo.png?=2" alt="Roblox" class="logo" />
