remove dumb js (why I do that) | Fix styling and parent div on nav

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
         <feDisplacementMap in="SourceGraphic" scale="2"/>
     </filter>
 </svg>
-  <button id="projectsButton" class="hidden" onclick="scrollToElement('page2')">Projects</button>
-  <button id="contactButton" class="hidden" onclick="scrollToElement('page2')">Contact Me</button>
+    <div class="nav">
+        <button id="projectsButton" class="hidden" onclick="scrollToElement('page2')">Projects</button>
+        <button id="contactButton" class="hidden" onclick="scrollToElement('page2')">Contact Me</button>
+    </div>
     <div class="background"></div>
     <div id="page1" class="page">
         <div class="typed-text-container">
