--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <meta name="author" content="Totem#0001">
     <meta name="keywords" content="personal hobby, coding, gaming, projects">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Totem#0001 | Personal Hobby Landing Page">
+    <meta property="og:title" content="Totem#0001">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="My personal hobby landing page! Here, you'll find a collection of my projects and interests, ranging from coding to gaming.">
     <meta property="og:image" content="https://totem.lol/images/totem-logo.png">
     <meta property="og:url" content="https://totem.lol">
 </head>
