--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <input type="text" placeholder="Search">
          </div>
          <div class="header-profile">
-          <img class="profile-img" src="https://images.unsplash.com/photo-1600353068440-6361ef3a86e8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="">
+          <img class="profile-img" src="./images/profile-pic.png" alt="">
          </div>
         </div>
         <div class="wrapper">
