--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css?=5">
+    <link rel="stylesheet" href="./styles.css?=6">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script defer src="./script.js?=2"></script>
+    <script defer src="./script.js?=3"></script>
     <title>Totem.lol</title>
     <meta name="author" content="Totem#0001">
     <meta property="og:type" content="website">
@@ -36,8 +36,8 @@
         <div class="header">
          <div class="menu-circle"></div>
          <div class="header-menu">
-          <a class="menu-link is-active" onclick="ShowHome()">Home</a>
-          <a class="menu-link notify" onclick="ShowProjects()">Projects</a>
+          <a class="menu-link is-active home-btn">Home</a>
+          <a class="menu-link notify projects-btn">Projects</a>
          </div>
          <div class="search-bar">
           <input type="text" placeholder="Search">
@@ -129,24 +129,6 @@
          </div>
          <div class="main-container">
           <div class="content-wrapper projects-wrapper">
-           <div class="content-wrapper-header">
-            <div class="content-wrapper-context">
-             <h3 class="img-content">
-              <svg viewBox="0 0 512 512">
-               <path d="M467 0H45C20.099 0 0 20.099 0 45v422c0 24.901 20.099 45 45 45h422c24.901 0 45-20.099 45-45V45c0-24.901-20.099-45-45-45z" fill="#d6355b" data-original="#ff468c" />
-               <path xmlns="http://www.w3.org/2000/svg" d="M512 45v422c0 24.901-20.099 45-45 45H256V0h211c24.901 0 45 20.099 45 45z" fill="#d6355b" data-original="#d72878" />
-               <path xmlns="http://www.w3.org/2000/svg" d="M467 30H45c-8.401 0-15 6.599-15 15v422c0 8.401 6.599 15 15 15h422c8.401 0 15-6.599 15-15V45c0-8.401-6.599-15-15-15z" fill="#2e000a" data-original="#700029" />
-               <path xmlns="http://www.w3.org/2000/svg" d="M482 45v422c0 8.401-6.599 15-15 15H256V30h211c8.401 0 15 6.599 15 15z" fill="#2e000a" data-original="#4d0e06" />
-               <path xmlns="http://www.w3.org/2000/svg" d="M181 391c-41.353 0-75-33.647-75-75 0-8.291 6.709-15 15-15s15 6.709 15 15c0 24.814 20.186 45 45 45s45-20.186 45-45-20.186-45-45-45c-41.353 0-75-33.647-75-75s33.647-75 75-75 75 33.647 75 75c0 8.291-6.709 15-15 15s-15-6.709-15-15c0-24.814-20.186-45-45-45s-45 20.186-45 45 20.186 45 45 45c41.353 0 75 33.647 75 75s-33.647 75-75 75z" fill="#d6355b" data-original="#ff468c" />
-               <path xmlns="http://www.w3.org/2000/svg" d="M391 361h-30c-8.276 0-15-6.724-15-15V211h45c8.291 0 15-6.709 15-15s-6.709-15-15-15h-45v-45c0-8.291-6.709-15-15-15s-15 6.709-15 15v45h-15c-8.291 0-15 6.709-15 15s6.709 15 15 15h15v135c0 24.814 20.186 45 45 45h30c8.291 0 15-6.709 15-15s-6.709-15-15-15z" fill="#d6355b" data-original="#d72878" />
-              </svg>
-              Adobe Stock
-             </h3>
-             <div class="content-text">Grab yourself 10 free images from Adobe Stock in a 30-day free trial plan and find perfect image, that will help you with your new project.</div>
-             <button class="content-button">Start free trial</button>
-            </div>
-            <img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt="">
-           </div>
            <div class="content-section">
             <div class="content-section-title">Installed</div>
             <ul>
