Say it aint sooooooOo

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         <div class="overlay-app"></div>
         </div>
         <div id="loading-screen">
-            <p>Loading...</p>
+            <p id="loading-header">Loading...</p>
             <div id="progress-container">
                 <div id="progress-bar"></div>
             </div>
