--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fa-duotone fa-apartment"></i>
+              <i class="fa-solid fa-apartment"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fa-duotone fa-apartment"></i>
+                <i class="fa-solid fa-apartment"></i>
                 <div class="card-info-title">
                   <h3>Apartments</h3>  
                   <h4>Places to be apart. Wait, what?</h4>
@@ -35,11 +35,11 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fa-duotone fa-unicorn"></i>
+              <i class="fa-solid fa-unicorn"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fa-duotone fa-unicorn"></i>
+                <i class="fa-solid fa-unicorn"></i>
                 <div class="card-info-title">
                   <h3>Unicorns</h3>  
                   <h4>A single corn. Er, I mean horn.</h4>
@@ -51,11 +51,11 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fa-duotone fa-blender-phone"></i>
+              <i class="fa-solid fa-blender-phone"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fa-duotone fa-blender-phone"></i>
+                <i class="fa-solid fa-blender-phone"></i>
                 <div class="card-info-title">
                   <h3>Blender Phones</h3>  
                   <h4>These absolutely deserve to exist.</h4>
@@ -67,11 +67,11 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fa-duotone fa-person-to-portal"></i>
+              <i class="fa-solid fa-person-to-portal"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fa-duotone fa-person-to-portal"></i>
+                <i class="fa-solid fa-person-to-portal"></i>
                 <div class="card-info-title">
                   <h3>Adios</h3>  
                   <h4>See you...</h4>
@@ -83,11 +83,11 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fa-duotone fa-person-from-portal"></i>
+              <i class="fa-solid fa-person-from-portal"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fa-duotone fa-person-from-portal"></i>
+                <i class="fa-solid fa-person-from-portal"></i>
                 <div class="card-info-title">
                   <h3>I mean hello</h3>  
                   <h4>...over here.</h4>
@@ -99,11 +99,11 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fa-duotone fa-otter"></i>
+              <i class="fa-solid fa-otter"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fa-duotone fa-otter"></i>
+                <i class="fa-solid fa-otter"></i>
                 <div class="card-info-title">
                   <h3>Otters</h3>  
                   <h4>Look at me, imma cute lil fella.</h4>
