--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fa-solid fa-apartment"></i>
+              <!-- 1 Image -->
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fa-solid fa-apartment"></i>
+                <!-- 1 Image -->
                 <div class="card-info-title">
-                  <h3>Apartments</h3>  
-                  <h4>Places to be apart. Wait, what?</h4>
+                  <h3>1</h3>  
+                  <h4>Lorem Ipsum</h4>
                 </div>    
               </div>
             </div>
@@ -35,14 +35,14 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fa-solid fa-unicorn"></i>
+              <!-- 2 Image -->
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fa-solid fa-unicorn"></i>
+                <!-- 2 Image -->
                 <div class="card-info-title">
-                  <h3>Unicorns</h3>  
-                  <h4>A single corn. Er, I mean horn.</h4>
+                  <h3>2</h3>  
+                  <h4>Lorem Ipsum</h4>
                 </div>    
               </div>  
             </div>
@@ -51,14 +51,14 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fa-solid fa-blender-phone"></i>
+              <!-- 3 Image -->
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fa-solid fa-blender-phone"></i>
+                <!-- 3 Image -->
                 <div class="card-info-title">
-                  <h3>Blender Phones</h3>  
-                  <h4>These absolutely deserve to exist.</h4>
+                  <h3>3</h3>  
+                  <h4>Lorem Ipsum</h4>
                 </div>    
               </div>
             </div>
