--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <div class="card" onClick="{(e) => window.location = 'https://github.com/Xv3nm'}">
+        <div class="card" onclick="window.location.href = 'https://github.com/Xv3nm'">
           <div class="card-content">
             <div class="card-image">
               <i class="fa-brands fa-github"></i>
