--- a/index.html
+++ b/index.html
@@ -19,14 +19,32 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <!-- 1 Image -->
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-0.44 0.24 64 64" width="64" height="64">
+                    <g fill="#4c4c4c"><use xlink:href="#A"/>
+                        <path d="M10.034 30.1a1.4 1.4 0 0 0-1.42-1.42c-.8 0-1.33.62-1.33 1.42v6.746a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42V30.1zm7.723-5.228a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v14.735a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42zM25.4 30.1a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v6.746a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42z"/>
+                        <use xlink:href="#A" x="30.625"/>
+                        <path d="M40.66 30.1a1.4 1.4 0 1 0-2.841 0v6.746a1.4 1.4 0 1 0 2.841 0zm7.632-5.228a1.4 1.4 0 1 0-2.841 0v14.735a1.4 1.4 0 1 0 2.841 0zm7.634 5.228a1.4 1.4 0 1 0-2.841 0v6.746a1.4 1.4 0 1 0 2.841 0zm7.634 3.827a1.4 1.4 0 1 0-2.84 0v2.93a1.4 1.4 0 1 0 2.84 0z"/>
+                    </g>
+                    <defs>
+                        <path id="A" d="M2.4 33.927a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v2.93a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42z"/>
+                    </defs>
+                </svg>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <!-- 1 Image -->
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-0.44 0.24 64 64" width="64" height="64">
+                    <g fill="#ffffff"><use xlink:href="#A"/>
+                        <path d="M10.034 30.1a1.4 1.4 0 0 0-1.42-1.42c-.8 0-1.33.62-1.33 1.42v6.746a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42V30.1zm7.723-5.228a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v14.735a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42zM25.4 30.1a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v6.746a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42z"/>
+                        <use xlink:href="#A" x="30.625"/>
+                        <path d="M40.66 30.1a1.4 1.4 0 1 0-2.841 0v6.746a1.4 1.4 0 1 0 2.841 0zm7.632-5.228a1.4 1.4 0 1 0-2.841 0v14.735a1.4 1.4 0 1 0 2.841 0zm7.634 5.228a1.4 1.4 0 1 0-2.841 0v6.746a1.4 1.4 0 1 0 2.841 0zm7.634 3.827a1.4 1.4 0 1 0-2.84 0v2.93a1.4 1.4 0 1 0 2.84 0z"/>
+                    </g>
+                    <defs>
+                        <path id="A" d="M2.4 33.927a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v2.93a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42z"/>
+                    </defs>
+                </svg>
                 <div class="card-info-title">
-                  <h3>1</h3>  
-                  <h4>Lorem Ipsum</h4>
+                  <h3>Cisco Documentation</h3>  
+                  <h4>https://net.totem.lol</h4>
                 </div>    
               </div>
             </div>
@@ -41,8 +59,8 @@
               <div class="card-info">
                 <!-- 2 Image -->
                 <div class="card-info-title">
-                  <h3>2</h3>  
-                  <h4>Lorem Ipsum</h4>
+                  <h3>Fancy Card</h3>  
+                  <h4>Placeholder type thingy</h4>
                 </div>    
               </div>  
             </div>
@@ -51,14 +69,14 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <!-- 3 Image -->
+              <i class="fa-solid fa-users-rectangle"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <!-- 3 Image -->
+                <i class="fa-solid fa-users-rectangle"></i>
                 <div class="card-info-title">
-                  <h3>3</h3>  
-                  <h4>Lorem Ipsum</h4>
+                  <h3>Group E Documentation</h3>  
+                  <h4>https://docs.totem.lol</h4>
                 </div>    
               </div>
             </div>
@@ -80,7 +98,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card" onclick="window.location.href = 'https://discord.com/users/486343483569864708'">
           <div class="card-content">
             <div class="card-image">
               <i class="fa-brands fa-discord"></i>
@@ -96,7 +114,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card" onclick="window.location.href = 'https://v3rmillion.net/member.php?action=profile&uid=567152'">
           <div class="card-content">
             <div class="card-image">
                 <svg version="1.2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" width="120" height="120">
