--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <img style="height: 100%;" src="./images/specs.png"/>
+                <img style="height: 20px;" src="./images/specs.png"/>
                 <div class="card-info-title">
                   <h3>Server Specifications</h3>  
                   <h4>https://totem.lol/specs</h4>
@@ -39,7 +39,7 @@
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <img style="height: 100%;" src="./images/mods.png"/>
+                <img style="height: 20px;" src="./images/mods.png"/>
                 <div class="card-info-title">
                   <h3>Server Mods</h3>  
                   <h4>https://totem.lol/mods</h4>
