--- a/specs/index.html
+++ b/specs/index.html
@@ -20,12 +20,13 @@
               <div class="card-content">
                 <div class="card-info-wrapper">
                   <div class="card-info">
-                    <img style="height: 20px;" src="./images/specs.png"/>
+                    <img style="height: 20px;" src="../images/specs.png"/>
                     <div class="card-info-title">
                       <h3>Server Specs</h3>  
-                      <h4>CPU: 2xIntel Xeon(R) E5-2670 0 @ 2.60GHz</h4>
+                      <hr>
+                      <h4>CPU: 2 x Intel Xeon(R) E5-2670 0 @ 2.60GHz</h4>
                       <h4>RAM: 128 GB </h4>
-                      <h4>HDD: 3x300GB RAID 0 (1.2tb of 6GB read & write)</h4>
+                      <h4>HDD: 3 x 300GB RAID 0 (1.2tb of 6GB read & write)</h4>
                     </div>    
                   </div>
                 </div>
