--- a/specs/index.html
+++ b/specs/index.html
@@ -25,8 +25,8 @@
                       <h3>Server Specs</h3>  
                       <hr>
                       <h4>CPU: 2 x Intel Xeon(R) E5-2670 0 @ 2.60GHz</h4>
-                      <h4>RAM: 128 GB </h4>
                       <h4>HDD: 3 x 300GB RAID 0 (1.2tb of 6GB read & write)</h4>
+                      <h4>RAM: 128 GB (64GB per CPU) </h4>
                     </div>    
                   </div>
                 </div>
